Fix comparison in some 32bit machines

BUG: 393487